crates/musq-macros/tests/trybuild/fail_json.stderr
error: Unsupported shape `enum`. Expected struct with named fields or unnamed fields.
 --> tests/trybuild/fail_json.rs:3:10
  |
3 | #[derive(Json)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Json` (in Nightly builds, run with -Z macro-backtrace for more info)
